# code-generator

./: main.py  observations.md  pyproject.toml
mvp/: addition.py  basic_loop.ipynb  fibonacci.py
mvp/prompts/: test_fail_all.py  test_fail_partial.py  test_fail_partial_tdd.py  test_init.py  test_init_tdd.py
semanticai/: main.py
semanticai/example_tests/: addition_test.py
semanticai/src/: completion.py  gpt_client.py  logger.py  prompts.py  prompts_test.py  spinner.py  utils.py  utils_test.py
semanticai/src/example_tests/: addition.py  addition_logs.txt.json  addition_test.py  fibonacci.py  fibonacci_test.py  grid_intersections.py  grid_intersections_logs.txt.json  grid_intersections_logs_partial_success.json  grid_intersections_test.py
semanticai/src/logs/: fibonacci.json  grid_intersections.json  logs.json
semanticai/src/utils/: get_unittest_results_test.py  strip_path_test.py
src/: env.py  iteration.py  unittest_solver.py
src/example_tests/: addition.py
src/logs/: addition.json
src/utils/: get_unittest_results.py
